--- a/index.html
+++ b/index.html
@@ -29,8 +29,14 @@
 	<main>
 		<section class="banner">
 			<div class="banner-content">
-				<h1>Lorem, ipsum.</h1>
-				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, mollitia.</p>
+				<div class="banner-content-div">
+					<h1>Backend</h1>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, mollitia.</p>
+				</div>
+				<div class="banner-content-div">
+					<h1>Frontend</h1>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, mollitia.</p>
+				</div>
 			</div>
 			<img src="./static/images/top-lenguajes-programacion-2021.jpg" alt="Lenguajes de programación">
 		
