--- a/pages/register.html
+++ b/pages/register.html
@@ -44,10 +44,11 @@
 							<div class="form-group">
 								<input type="password" name="your-pass" id="your-pass" placeholder="Contraseña">
 							</div>
-							<div class="form-group">
-								<input type="checkbox" name="remember-me" id="remember-me" class="agree-term">
+							<div class="form-group" id="checkbox">
+								
 								<label for="remember-me" class="label-agree-term">
-									<span>
+									<input type="checkbox" name="remember-me" id="remember-me" class="agree-term">
+									<span class="texto-checkbox">
 										Recordarme
 									</span>									
 								</label>
