--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./styles/index.css">
+	<link rel="icon" href="./static/images/favicon-16x16.png">
 
 	<!-- Google fonts -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,7 +20,7 @@
 			<a href="#"><h2>Cod34nd0</h2></a>
 			<ul>
 				<li><a href="#">Inicio</a></li>
-				<li><a href="#popular">Populares</a></li>
+				<li><a href="#lenguajes">Populares</a></li>
 				<li><a href="#comments">Comentarios</a></li>				
 				<li><a href="./pages/register.html" target="_blank" class="btn-register">Iniciar Sesion</a></li>
 			</ul>
@@ -28,6 +29,8 @@
 
 	<main>
 		<section class="banner">
+
+			<img src="./static/images/top-lenguajes-programacion-2021.jpg" alt="">
 
 			<div class="banner-content">
 				<h1> ESTE ES EL LUGAR QUE ESTABAS BUSCANDO PARA <b>DESARROLLARTE</b></h1>
@@ -76,6 +79,7 @@
 				<div class="div-card">
 					<h2>Node.js</h2>
 					<p>Node.js es un entorno de ejecucion multiplataforma en JavaScript que permite a los desarrolladores construir aplicaciones del lado del servidor y de red con JavaScript.</p>
+					<br><br>
 					<a href="https://www.youtube.com/watch?v=yB4n_K7dZV8" class="turorial" target="_blank">Ver mas</a>
 				</div>
 
