--- a/pages/register.html
+++ b/pages/register.html
@@ -4,20 +4,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="../styles/register.css">
+	<link rel="icon" href="../static/images/favicon-16x16.png">
 
 		<!-- Google fonts -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Jersey+10+Charted&family=Platypi:ital,wght@0,300..800;1,300..800&family=Roboto:wght@400;900&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <title>Registrate Gratis</title>
 </head>
 <body>
   <header>
 		<!-- Barra de navegación -->
 		<nav class="navbar">
-			<a href="#"><h2>Título de la página</h2></a>
+			<a href="../index.html"><h2>Cod34nd0</h2></a>
 			<ul>
-				<li><a href="#">Inicio</a></li>
+				<li><a href="../index.html">Inicio</a></li>
 				<li><a href="#popular">Populares</a></li>
 				<li><a href="#comments">Comentarios</a></li>				
 				<li><a href="./pages/register.html" target="_blank" class="register">Registrate</a></li>
