--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			<ul>
 				<li><a href="#">Inicio</a></li>
 				<li><a href="#lenguajes">Populares</a></li>
-				<li><a href="#comments">Comentarios</a></li>				
+				<li><a href="#comentarios">Comentarios</a></li>				
 				<li><a href="./pages/register.html" target="_blank" class="btn-register">Iniciar Sesion</a></li>
 			</ul>
 		</nav>
@@ -130,9 +130,9 @@
 			
 		</section>
 		
-		<section>
+		<section id="comentarios">
 			<h1>Comentarios</h1>
-			<form action="#">
+			<form action="POST">
 				<label for="#">
 					<h3>Comentario</h3>
 					<input type="text" placeholder="Ingrese comentario">
