--- a/pages/register.html
+++ b/pages/register.html
@@ -19,8 +19,8 @@
 			<a href="../index.html"><h2>Cod34nd0</h2></a>
 			<ul>
 				<li><a href="../index.html">Inicio</a></li>
-				<li><a href="#popular">Populares</a></li>
-				<li><a href="#comments">Comentarios</a></li>				
+				<li><a href="../index.html#lenguajes">Populares</a></li>
+				<li><a href="../index.html#comentarios">Comentarios</a></li>				
 				<li><a href="./pages/register.html" target="_blank" class="register">Registrate</a></li>
 			</ul>
 	  </nav>
@@ -36,7 +36,7 @@
 					</div>
 					<div class="signin-form">
 						<h2 class="form-title">
-							Sign up
+							Registrate
 						</h2>
 						<form method="post" class="register-form" id="login-form">
 							<div class="form-group">
