--- a/index.html
+++ b/index.html
@@ -143,10 +143,10 @@
 
 	<footer>
 		<div class="footer">
-			<a href="">Términos y condiciones</a>
-			<a href="">Preguntas frecuentes</a>
-			<a href="">Ayuda</a>
-			<a href="">Acerca de nosotros</a>
+			<a href="#">Términos y condiciones</a>
+			<a href="#">Preguntas frecuentes</a>
+			<a href="#">Ayuda</a>
+			<a href="#">Acerca de nosotros</a>
 		</div>
 	</footer>
 </body>
